fix exit event on leaving the app so it doesn't get turned into a move event and incorrectly put up tooltips. b=425259 r=smichaud sr=vlad